# Langgraph-Customer-Support-Agent

./: README.md  main.py  pyproject.toml  requirements.txt
config/: agent_config.yaml  stages_config.json
examples/: demo_output_20250910_000013.json  demo_output_20250910_000105.json  sample_input.json
src/agent/: langgraph_agent.py  state_manager.py
src/mcp/: mcp_client.py
src/stages/: stage_01_intake.py  stage_02_understand.py  stage_03_prepare.py  stage_04_ask.py  stage_05_wait.py  stage_06_retrieve.py  stage_07_decide.py  stage_08_update.py  stage_09_create.py  stage_10_do.py  stage_11_complete.py
