[project]
name = "langgraph-customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langgraph>=0.6.6",
    "mcp>=1.13.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
